--- a/packages/runes/package.json
+++ b/packages/runes/package.json
@@ -85,7 +85,8 @@
     "@runes/screen": "1.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6"
   },
   "author": ""
 }
