--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "private": true,
   "version": "1.0.0",
   "description": "",
-  "scripts": {},
+  "scripts": {
+    "start-runes": "yarn workspace @runes/runes start",
+    "build-screen": "yarn workspace @runes/screen build"
+  },
   "author": "",
   "license": "GPL-3.0",
   "workspaces": [
