enable strict type checking

--- a/packages/runes/tsconfig.json
+++ b/packages/runes/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    // "strict": true,
+    "strict": true,
     "allowJs": true,
     "module": "commonjs",
     "skipLibCheck": true,
