--- a/packages/runes/package.json
+++ b/packages/runes/package.json
@@ -69,6 +69,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.21",
+    "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.0",
@@ -89,7 +90,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "ws": "^8.4.2"
   },
   "author": ""
 }
