fix bug in cairo path fill

--- a/packages/matron/CMakeLists.txt
+++ b/packages/matron/CMakeLists.txt
@@ -7,6 +7,50 @@ set(DIST_DIR ${CMAKE_CURRENT_BINARY_DIR}/dist)
 set(INCLUDE_DIR ${DIST_DIR}/include)
 set(STATIC_LIB_DIR ${DIST_DIR}/lib)
 
+# ZLIB #########################################################################
+
+set(Z_CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>)
+set(Z_STATIC_LIB ${STATIC_LIB_DIR}/libz.a)
+
+ExternalProject_Add(
+    libz
+    URL https://zlib.net/zlib-1.2.11.tar.gz
+    PREFIX ${CMAKE_CURRENT_BINARY_DIR}/lib/zlib
+    INSTALL_DIR ${DIST_DIR}
+    CMAKE_COMMAND emcmake ${CMAKE_COMMAND}
+    CMAKE_ARGS ${Z_CMAKE_ARGS}
+    BUILD_BYPRODUCTS ${Z_STATIC_LIB}
+)
+
+add_library(z STATIC IMPORTED GLOBAL)
+add_dependencies(z libz)
+set_target_properties(z PROPERTIES IMPORTED_LOCATION ${Z_STATIC_LIB})
+
+# PNG
+
+set(PNG_STATIC_LIB ${STATIC_LIB_DIR}/libpng.a)
+set(PNG_CMAKE_ARGS
+    -DPNG_SHARED=OFF
+    -DM_LIBRARY=""
+    -DZLIB_INCLUDE_DIR=${INCLUDE_DIR}
+    -DZLIB_LIBRARY=${Z_STATIC_LIB}
+    -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>)
+
+ExternalProject_Add(
+    libpng
+    URL https://sourceforge.net/projects/libpng/files/libpng16/1.6.37/libpng-1.6.37.tar.xz
+    PREFIX ${CMAKE_CURRENT_BINARY_DIR}/lib/libpng
+    INSTALL_DIR ${DIST_DIR}
+    CMAKE_COMMAND emcmake ${CMAKE_COMMAND}
+    CMAKE_ARGS ${PNG_CMAKE_ARGS}
+    BUILD_BYPRODUCTS ${PNG_STATIC_LIB}
+    DEPENDS z
+)
+
+add_library(png STATIC IMPORTED GLOBAL)
+add_dependencies(png libpng)
+set_target_properties(png PROPERTIES IMPORTED_LOCATION ${PNG_STATIC_LIB})
+
 # FREETYPE #####################################################################
 
 set(FREETYPE_STATIC_LIB ${STATIC_LIB_DIR}/libfreetype.a)
@@ -33,7 +77,8 @@ set(PIXMAN_SOURCE_DIR ${PIXMAN_PREFIX}/src/pixman)
 set(PIXMAN_STATIC_LIB ${STATIC_LIB_DIR}/libpixman-1.a)
 set(PIXMAN_CONFIGURE_COMMAND
     emconfigure ${PIXMAN_SOURCE_DIR}/configure
-    "CFLAGS=-mbulk-memory -matomics"
+    "CFLAGS=-mbulk-memory -matomics -g"
+    "LDFLAGS=-g"
     --enable-shared=no
     --prefix=<INSTALL_DIR>)
 
@@ -60,18 +105,16 @@ set(CAIRO_SOURCE_DIR ${CAIRO_PREFIX}/src/cairo)
 set(CAIRO_STATIC_LIB ${STATIC_LIB_DIR}/libcairo.a)
 set(CAIRO_CONFIGURE_COMMAND
     emconfigure ${CAIRO_SOURCE_DIR}/configure
-    "CFLAGS=-mbulk-memory -matomics"
+    "PKG_CONFIG_PATH=${STATIC_LIB_DIR}/pkgconfig"
+    "png_REQUIRES=libpng"
+    "CFLAGS=-I${INCLUDE_DIR} -I${INCLUDE_DIR}/libpng16 -mbulk-memory -matomics -g"
+    "LDFLAGS=-L${STATIC_LIB_DIR} -g"
+    "LIBS=-lpng16 -lz"
     "pixman_CFLAGS=-I${INCLUDE_DIR}/pixman-1"
     "pixman_LIBS=-L${STATIC_LIB_DIR} -lpixman-1"
     "FREETYPE_CFLAGS=-I${INCLUDE_DIR}/freetype2"
     "FREETYPE_LIBS=-L${STATIC_LIB_DIR} -lfreetype"
     --enable-shared=no
-    --enable-script=no
-    --enable-ps=no
-    --enable-svg=no
-    --enable-pdf=no
-    --enable-png=no
-    --enable-interpreter=no
     --prefix=<INSTALL_DIR>)
 
 ExternalProject_Add(
@@ -81,10 +124,11 @@ ExternalProject_Add(
     SOURCE_DIR ${CAIRO_SOURCE_DIR}
     INSTALL_DIR ${DIST_DIR}
     CONFIGURE_COMMAND ${CAIRO_CONFIGURE_COMMAND}
+    PATCH_COMMAND patch ${CAIRO_SOURCE_DIR}/src/cairo-path-fill.c ${CMAKE_CURRENT_SOURCE_DIR}/patch/cairo-path-fill.patch
     BUILD_COMMAND cd src && emmake make
     INSTALL_COMMAND cd src && emmake make install
     BUILD_BYPRODUCTS ${CAIRO_STATIC_LIB}
-    DEPENDS libpixman libfreetype
+    DEPENDS libz libpng libpixman libfreetype
 )
 
 add_library(cairo STATIC IMPORTED GLOBAL)
@@ -102,7 +146,7 @@ ExternalProject_Add(
     INSTALL_DIR ${DIST_DIR}
     CONFIGURE_COMMAND ""
     BUILD_IN_SOURCE 1
-    BUILD_COMMAND emmake make "CC=emcc" "AR=emar rcu" "RANLIB=emranlib" posix
+    BUILD_COMMAND emmake make "CC=emcc" "AR=emar rcu" "RANLIB=emranlib" "CFLAGS=-g" "LDFLAGS=-g" posix
     INSTALL_COMMAND emmake make "INSTALL_TOP=<INSTALL_DIR>" install
     BUILD_BYPRODUCTS ${LUA_STATIC_LIB}
 )
@@ -133,14 +177,18 @@ add_executable(index
     src/hardware/screen.c
     src/hardware/screen/static.c)
 
-add_dependencies(index pixman freetype cairo lua)
-target_link_libraries(index pixman freetype cairo lua)
+add_dependencies(index libz libpng libpixman libfreetype libcairo liblua)
+target_link_libraries(index z png pixman freetype cairo lua)
 
 set(USER web_user)
 set(HOME /home/${USER})
 
+set(EMSCRIPTEN_COMPILE_FLAGS "-g")
+set_target_properties(index PROPERTIES COMPILE_FLAGS ${EMSCRIPTEN_COMPILE_FLAGS})
+
 set(EMSCRIPTEN_LINK_FLAGS
-    "-s INITIAL_MEMORY=32MB \
+    "-g \
+     -s INITIAL_MEMORY=32MB \
      -s ALLOW_MEMORY_GROWTH=1 \
      -s EXPORTED_RUNTIME_METHODS=cwrap \
      -s MODULARIZE \
