--- a/packages/matron/CMakeLists.txt
+++ b/packages/matron/CMakeLists.txt
@@ -194,6 +194,7 @@ set(EMSCRIPTEN_LINK_FLAGS
      -s MODULARIZE \
      -s EXPORT_ES6=1 \
      -s ENVIRONMENT='web' \
+     -s SINGLE_FILE=1 \
      --no-entry \
      --embed-file ${CMAKE_CURRENT_SOURCE_DIR}/resources@/${HOME}/norns/resources \
      --embed-file ${CMAKE_CURRENT_SOURCE_DIR}/lua@/${HOME}/norns/lua \
