--- a/packages/runes/package.json
+++ b/packages/runes/package.json
@@ -80,7 +80,9 @@
     "electron": "16.0.7",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "node-loader": "^2.0.0",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.2",
@@ -89,6 +91,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
     "electron-squirrel-startup": "^1.0.0",
+    "monaco-editor": "^0.31.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
