--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,17 @@
         "kind": "build",
         "isDefault": true
       }
+    },
+    {
+      "type": "npm",
+      "script": "build-matron",
+      "problemMatcher": [],
+      "label": "npm: build-matron",
+      "detail": "yarn workspace @runes/matron build",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
     }
   ]
 }
