--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,11 @@
     "es6": true,
     "node": true
   },
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
+    }
+  },
   "ignorePatterns": ["webpack.*.js", "webpack.*.config.js"],
   "extends": [
     "eslint:recommended",
@@ -13,5 +18,6 @@
     "plugin:import/electron",
     "plugin:import/typescript"
   ],
-  "parser": "@typescript-eslint/parser"
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["import"]
 }
