--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "css-loader": "^6.0.0",
     "electron": "16.0.7",
     "eslint": "^8.0.1",
-    "eslint-plugin-import": "^2.25.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
