convert webpack configuration to typescript
electron forge does not support typescript webpack configurations
even though webpack does. we compile the typescript configurations
to javascript as a workaround.

see electronforge discussion here: https://github.com/electron-userland/electron-forge/issues/697

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,10 +14,10 @@
     },
     {
       "type": "npm",
-      "script": "build",
+      "script": "build-matron",
       "problemMatcher": [],
-      "label": "npm: build",
-      "detail": "yarn build",
+      "label": "npm: build-matron",
+      "detail": "yarn build-matron",
       "group": {
         "kind": "build",
         "isDefault": true
