--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "description": "Norns vector graphics editor",
   "main": ".webpack/main",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx .",
-    "configure": "cd matron && emcmake cmake -Bbuild -H.",
-    "build": "cd matron && cmake --build build --target matron && cp matron.d.ts build",
-    "clean": "rm -rf matron/build"
+    "configure-matron": "cd matron && emcmake cmake -Bbuild -H.",
+    "build-matron": "cd matron && cmake --build build --target matron && cp matron.d.ts build",
+    "build-config": "tsc --build tsconfig.webpack.json",
+    "clean": "rm -rf matron/build",
+    "start": "yarn build-config && electron-forge start",
+    "package": "yarn build-config && electron-forge package",
+    "make": "yarn build-config && electron-forge make",
+    "publish": "yarn build-config && electron-forge publish",
+    "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
   "license": "GPL-3.0",
@@ -73,10 +74,12 @@
     "@electron-forge/plugin-webpack": "6.0.0-beta.63",
     "@types/emscripten": "^1.39.6",
     "@types/luaparse": "^0.2.8",
+    "@types/node": "^17.0.16",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.21",
+    "@types/webpack": "^5.28.0",
     "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -93,6 +96,7 @@
     "node-loader": "^2.0.0",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.2",
+    "ts-node": "^10.5.0",
     "typescript": "~4.5.4"
   },
   "dependencies": {
