--- a/package.json
+++ b/package.json
@@ -1,113 +1,9 @@
 {
-  "name": "runes",
-  "productName": "runes",
-  "version": "0.0.1",
+  "name": "@runes/runes",
+  "private": true,
   "description": "Norns vector graphics editor",
-  "main": ".webpack/main",
-  "scripts": {
-    "configure-matron": "cd matron && emcmake cmake -Bbuild -H.",
-    "build-matron": "cd matron && cmake --build build --target matron",
-    "build-config": "tsc --build tsconfig.webpack.json",
-    "clean": "rm -rf matron/build",
-    "start": "yarn build-config && electron-forge start",
-    "package": "yarn build-config && electron-forge package",
-    "make": "yarn build-config && electron-forge make",
-    "publish": "yarn build-config && electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
-  },
-  "keywords": [],
   "license": "GPL-3.0",
-  "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "runes"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ],
-      "plugins": [
-        [
-          "@electron-forge/plugin-webpack",
-          {
-            "mainConfig": "./webpack.main.config.js",
-            "renderer": {
-              "config": "./webpack.renderer.config.js",
-              "entryPoints": [
-                {
-                  "html": "./src/index.html",
-                  "js": "./src/renderer.ts",
-                  "name": "main_window",
-                  "preload": {
-                    "js": "./src/preload.ts"
-                  }
-                }
-              ]
-            }
-          }
-        ]
-      ]
-    }
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.63",
-    "@electron-forge/maker-deb": "^6.0.0-beta.63",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.63",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
-    "@electron-forge/maker-zip": "^6.0.0-beta.63",
-    "@electron-forge/plugin-webpack": "6.0.0-beta.63",
-    "@types/emscripten": "^1.39.6",
-    "@types/luaparse": "^0.2.8",
-    "@types/node": "^17.0.16",
-    "@types/offscreencanvas": "^2019.6.4",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "@types/styled-components": "^5.1.21",
-    "@types/webpack": "^5.28.0",
-    "@types/ws": "^8.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@vercel/webpack-asset-relocator-loader": "1.7.0",
-    "css-loader": "^6.0.0",
-    "electron": "16.0.7",
-    "eslint": "^8.0.1",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.4",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.0.1",
-    "monaco-editor-webpack-plugin": "^7.0.1",
-    "node-loader": "^2.0.0",
-    "style-loader": "^3.0.0",
-    "ts-loader": "^9.2.2",
-    "ts-node": "^10.5.0",
-    "typescript": "~4.5.4"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.7.1",
-    "electron-squirrel-startup": "^1.0.0",
-    "luaparse": "^0.3.1",
-    "monaco-editor": "^0.31.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "styled-components": "^5.3.3",
-    "ws": "^8.4.2"
-  },
-  "author": ""
+  "workspaces": [
+    "packages/*"
+  ]
 }
