--- a/packages/matron/package.json
+++ b/packages/matron/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "configure": "emcmake cmake -Bbuild -H.",
     "build": "cmake --build build --target matron",
-    "install": "mkdir dist && cp build/matron.* dist"
+    "install": "mkdir dist && cp build/matron.* dist",
+    "clean": "rm -rf build"
   },
   "devDependencies": {
     "@types/emscripten": "^1.39.6"
