--- a/packages/matron/package.json
+++ b/packages/matron/package.json
@@ -7,7 +7,7 @@
     "configure": "emcmake cmake -DCMAKE_INSTALL_PREFIX=./ -Bbuild -H.",
     "build": "cmake --build build --target matron",
     "preinstall": "cmake --build build --target matron install",
-    "clean": "rm -rf build"
+    "clean": "rm -rf build/*"
   },
   "devDependencies": {
     "@types/emscripten": "^1.39.6"
