limit environment to web worker

--- a/packages/matron/CMakeLists.txt
+++ b/packages/matron/CMakeLists.txt
@@ -229,6 +229,7 @@ set(EMSCRIPTEN_LINK_FLAGS
      -s EXPORTED_RUNTIME_METHODS=cwrap \
      -s MODULARIZE \
      -s EXPORT_ES6=1 \
+     -s ENVIRONMENT=worker \
      --no-entry \
      --preload-file ${NORNS_DIR}/resources@/${HOME}/norns/resources \
      --preload-file ${NORNS_DIR}/lua/core/config.lua@/${HOME}/norns/lua/core/config.lua \
