install via cmake

--- a/packages/matron/CMakeLists.txt
+++ b/packages/matron/CMakeLists.txt
@@ -253,7 +253,9 @@ set(EMSCRIPTEN_LINK_FLAGS
      --preload-file ${NORNS_DIR}/matronrc.lua@/${HOME}/matronrc.lua")
 set_target_properties(matron PROPERTIES LINK_FLAGS ${EMSCRIPTEN_LINK_FLAGS})
 
-# MISC #########################################################################
-
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/matron.d.ts
-    DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+install(FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/matron.d.ts
+    "$<TARGET_FILE_DIR:matron>/matron.data"
+    "$<TARGET_FILE_DIR:matron>/matron.js"
+    "$<TARGET_FILE_DIR:matron>/matron.wasm"
+    DESTINATION ./dist)
