--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   "scripts": {
     "predeploy": "yarn workspace @runes/web build",
     "deploy": "gh-pages -d packages/web/build",
+    "submodule": "git submodule init && git submodule update",
     "configure": "yarn workspace @runes/matron configure",
     "build": "yarn workspace @runes/matron build",
+    "build-install": "yarn workspace @runes/matron build-install",
     "clean": "yarn workspace @runes/matron clean",
-    "install-matron": "yarn workspace @runes/matron install",
-    "clean-build": "yarn clean && yarn configure && yarn build && yarn install-matron",
+    "clean-build": "yarn clean && yarn configure && yarn build-install",
+    "setup": "yarn submodule && yarn install && yarn clean-build",
     "start": "yarn workspace @runes/web start",
-    "submodule": "git submodule init && git submodule update",
-    "docker-build": "docker build -t runes:latest .",
-    "docker-run": "docker run -it --rm --name runes --mount type=bind,source=\"$(pwd)\",target=/runes -p 3000:3000 runes:latest"
+    "image": "docker build -t runes:latest .",
+    "docker": "docker run -it --rm --name runes --mount type=bind,source=\"$(pwd)\",target=/runes -v runes_node_modules:/runes/node_modules -v runes_matron_build:/runes/packages/matron/build -p 3000:3000 runes:latest",
+    "docker-setup": "yarn docker yarn setup",
+    "docker-start": "yarn docker yarn start"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
