--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -47,9 +47,13 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.4.3",
+    "@types/jest-image-snapshot": "^6.1.0",
     "@types/luaparse": "^0.2.8",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/styled-components": "^5.1.22",
-    "monaco-editor-webpack-plugin": "^7.0.1"
+    "canvas": "^2.11.2",
+    "jest-image-snapshot": "^6.1.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "msw": "^1.2.1"
   }
 }
