add configure commands for other build types

--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "deploy": "gh-pages -d packages/web/build",
     "submodule": "git submodule init && git submodule update",
     "configure": "yarn workspace @runes/matron configure",
+    "configure-debug": "yarn configure -DCMAKE_BUILD_TYPE=DEBUG",
+    "configure-minsizerel": "yarn configure -DCMAKE_BUILD_TYPE=MINSIZEREL",
+    "configure-release": "yarn configure -DCMAKE_BUILD_TYPE=RELEASE",
+    "configure-relwithdebinfo": "yarn configure -DCMAKE_BUILD_TYPE=RELWITHDEBINFO",
     "build": "yarn workspace @runes/matron build",
+    "build-parallel": "yarn build -j4",
     "build-install": "yarn workspace @runes/matron build-install",
     "clean": "yarn workspace @runes/matron clean",
     "clean-build": "yarn clean && yarn configure && yarn build-install",
