--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -4,7 +4,7 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     container:
-      image: midouest/runes:0.0.1
+      image: midouest/runes:latest
     steps:
       - uses: actions/checkout@v3
         with:
