revert to midouest/runes:latest

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -3,19 +3,13 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: emscripten/emsdk:latest
+    container: midouest/runes:latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           submodules: true
-
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-          cache: yarn
 
       - name: Build matron
         run: |
